updated build and start

--- a/src/HelloWorld/HelloWorld.mdx
+++ b/src/HelloWorld/HelloWorld.mdx
@@ -3,7 +3,7 @@ name: Hello World
 ---
 
 import { Playground, PropsTable } from 'docz'
-import HelloWorld from './HelloWorld'
+import { HelloWorld } from '../../build/bundle'
 
 # Hello World
 <PropsTable of={HelloWorld} />
